Better construct command line

BUG: 474758

After 87c38a30fff27e3e9c0375f5c17d53ab0644ea0f the executable was KShell::joinArgs but it wasn't need.

(cherry picked from commit 90ddeb9f2fd05529c4cda97502faa094adf7f9cc)